--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -9,3 +9,19 @@ padding: 0;
     --mainFont:"Poppins", sans-serif;
     --subfont:"Inter", sans-serif;
 }
+a{
+    text-decoration: none;
+}
+ul{
+list-style-type: none;
+}
+.container{
+width: calc(100% - 120px);
+margin: auto;
+}
+.row {
+    display: flex ;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
